monticore-grammar/src/test/resources/de/monticore/grammar/cocos/invalid/A0145/A0145.mc4
/* (c) https://github.com/MontiCore/monticore */

package  de.monticore.grammar.cocos.invalid.A0145;

grammar A0145 {

  Foo = key("foo&");

}
